[package]
name = "raklib"
version = "0.1.0"
authors = ["GreenMine <greenmine94@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/GreenMine/raklib-rs"

[dependencies]
tokio = { version = "1.25.0", features = ["net", "sync", "macros", "rt-multi-thread", "time"] }
futures = "0.3"
thiserror = "1.0.0"

log = "0.4.0"

raklib_std = { path = "../raklib_std", features = ["derive"] }
dashmap = "5.4.0"
