[package]
name = "raklib_examples"
version = "0.0.0"
edition = "2021"

[dependencies]
raklib = { path = "../raklib" }
raklib_std = { path = "../raklib_std" }
tokio = { version = "1.17.0", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
