[package]
name = "raklib_std"
version = "0.1.0"
authors = ["GreenMine <greenmine94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"

raklib_derive = { path = "../raklib_derive", optional = true }

[features]

derive = ["raklib_derive"]